# bank_operation_analis

./: .env.example  README.md  main.py  pyproject.toml
data/: .~lock.operations.xlsx#  report_25.06.2025.json  user_settings.json
reports/: report_22.06.2025.json
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
