[tool.poetry]
name = "course-work-3"
version = "0.1.0"
description = ""
authors = ["Your Name <kgranevitch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
python-dotenv = "^1.1.0"
pandas = "^2.3.0"
openpyxl = "^3.1.5"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
ruff = "^0.12.0"
isort = "^6.0.1"
mypy = "^1.16.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_lenght = 119
exclude = '.git'

[tool.isort]
line_lenght = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exlude = 'venv'
